Determine bugmans in python and make the js stop rolling accordingly.

--- a/static/js/bugman/templates/lottery.html
+++ b/static/js/bugman/templates/lottery.html
@@ -8,7 +8,7 @@
             <h4>{$ day | uppercase $}</h4>
             <div class="day">
                 <ul>
-                    <li data-id="{$ user.user $}" ng-repeat="user in projectUsers">{$ user.fullname $}</li>
+                    <li data-id="{$ user.username $}" ng-repeat="user in projectUsers">{$ user.fullname $}</li>
                 </ul>
             </div>
         </div>
