--- a/static/js/bugman/templates/lottery.html
+++ b/static/js/bugman/templates/lottery.html
@@ -1,4 +1,4 @@
-<h3 ng-show="project">{$ project.name $} ({$ projectUsers.length $} potatoes)
+<h3 ng-show="project">{$ project.name $} - {$ projectUsers.length $} potato<span ng-if="projectUsers.length != 1">es</span>
     <a class="btn btn-primary bt-lg roll-it-btn" ng-show="projectUsers.length > 1" ng-click="startAll()">Roll the spuds!</a>
 </h3>
 
