--- a/static/js/bugman/templates/lottery.html
+++ b/static/js/bugman/templates/lottery.html
@@ -2,9 +2,25 @@
     <a class="btn btn-primary bt-lg roll-it-btn" ng-show="projectUsers.length > 1" ng-click="startAll()">Roll the spuds!</a>
 </h3>
 
+<div ng-show="!project">Select a project</div>
+
 <div ng-show="projectUsers.length > 1">
+    <h3>Included potatoes</h3>
+    <label for="{$ user.username $}-checkbox" ng-repeat="user in projectUsers">
+        <input checked
+               type="checkbox"
+               value="{$ user.username $}"
+               class="user-checkbox"
+               id="{$ user.username $}-checkbox"
+               ng-click="updateCheckedUsers()"
+        />
+        {$ user.fullname $}
+    </label>
+</div>
+
+<div ng-show="checkedUsers.length > 1">
     <div class="days-container">
-        <div class="days {$ day $}" style="float: left;" ng-repeat="day in days">
+        <div class="days {$ day $}" ng-repeat="day in days">
             <h4>{$ day | uppercase $}</h4>
             <div class="day">
                 <ul>
@@ -14,9 +30,16 @@
         </div>
     </div>
 </div>
-<div ng-show="projectUsers.length == 1">
-    The only person in this project is <strong>{$ projectUsers[0].fullname $}</strong> so errr...
+
+<div ng-show="checkedUsers.length == 1">
+    The only person in this project is <strong>{$ checkedUsers[0].fullname $}</strong> so errr...
 </div>
-<div ng-show="projectUsers.length == 0">
+
+<div ng-show="project && checkedUsers.length == 0">
     The project runs itself!
+</div>
+
+<div>
+    <h4>Week {$ firstDay | date:"yyyy/MM/dd" $} - {$ lastDay | date:"yyyy/MM/dd" $}</h4>
+    
 </div>
