--- a/templates/bugman/home.html
+++ b/templates/bugman/home.html
@@ -4,11 +4,10 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title></title>
-        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}" />
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" />
-        <script src="{% static "js/angular.js" %}"></script>
-        <script src="{% static "js/ng-route.js" %}"></script>
-        <script src="{% static "js/jquery-1.11.2.min.js" %}"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     </head>
     <body ng-app="BugmanApp">
         <div class="container" ng-controller="ProjectsController">
@@ -18,6 +17,13 @@
             </span>
         </div>
         <div ng-view class="container"></div>
+
+        <script src="{% static "js/jquery-2.1.1.min.js" %}"></script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
+
+        <script src="{% static "js/angular.js" %}"></script>
+        <script src="{% static "js/ng-route.js" %}"></script>
 
         <script src="{% static "js/bugman/app.js" %}"></script>
         <script src="{% static "js/bugman/controllers.js" %}"></script>
