Better days positioing.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,7 @@
 div.day {
     position: relative;
     width: 180px;
-    height: 35px;
+    height: 31px;
     z-index: -10;
     overflow: hidden;
     border: 1px solid white;
@@ -18,14 +18,17 @@ div.day {
 div.day ul {
     position: absolute;
     width: 180px;
-    height: 40px;
+    height: 30px;
     top: -40px;
     padding-left: 0;
-    text-align: center;
 }
 
 div.day ul li {
     display: block;
-    height: 40px;
+    height: 30px;
     width: 180px;
+}
+
+td {
+    padding: 10px 5px;
 }
