--- a/templates/bugman/home.html
+++ b/templates/bugman/home.html
@@ -11,21 +11,30 @@
     </head>
     <body ng-app="BugmanApp">
         <div class="container" ng-controller="ProjectsController">
-
-            <ul id="dropdown1" class="dropdown-content">
+            <ul id="projects-dropdown" class="dropdown-content">
                 <li ng-repeat="project in projects">
                     <a href="/#/{$ project.id $}/">{$ project.name $}</a>
                 </li>
             </ul>
+
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo">Bugman Duty</a>
+                    <a href="#!" class="brand-logo">Bugman</a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
                     <ul class="right hide-on-med-and-down">
                         <!-- <li><a href="sass.html">Sass</a></li> -->
-                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Projects<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+                        <li>
+                            <a class="dropdown-button" href="#!" data-activates="projects-dropdown">Projects <i class="mdi-navigation-arrow-drop-down right"></i></a>
+                        </li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li ng-repeat="project in projects">
+                            <a href="/#/{$ project.id $}/">{$ project.name $}</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
+
         </div>
 
         <div ng-view class="container"></div>
