Reoder results, change the collection styling.

--- a/static/js/bugman/templates/lottery.html
+++ b/static/js/bugman/templates/lottery.html
@@ -44,15 +44,32 @@
     </table>
 </div>
 
-<div ng-show="weeklyResults.length > 0" class="week-results">
+<div class="week-results">
     <h5 class="center-align">Week {$ firstDay | date:"yyyy/MM/dd" $} - {$ lastDay | date:"yyyy/MM/dd" $}</h5>
 
-    <ul class="collection">
-        <li class="collection-item" ng-repeat="result in weeklyResults">
-            Ran by: <b>{$ result.ran_by $}</b>
-            on {$ result.created | date:"EEEE" $} at {$ result.created | date:"mediumTime" $}<br/>
-            Partakers: <span ng-repeat="partaker in result.partakers"><b>{$ partaker $}</b><span ng-show="!$last">, </span></span><br>
-            Results: <span ng-repeat="day in days">{$ day $} <b>{$ result.result[$index] $}</b><span ng-show="!$last">, </span></span>
-        </li>
-    </ul>
+    <p class="center-align" ng-show="weeklyResults.length == 0">bugmans have been not selected for the current week yet</p>
+
+    <div ng-show="weeklyResults.length > 0">
+        <h6>Last result:</h6>
+        <ul class="collection">
+            <li class="collection-item" ng-repeat="result in weeklyResults" ng-show="$first">
+                Ran by: <b>{$ result.ran_by $}</b>
+                on {$ result.created | date:"EEEE" $} at {$ result.created | date:"mediumTime" $}<br/>
+                Partakers: <span ng-repeat="partaker in result.partakers"><b>{$ partaker $}</b><span ng-show="!$last">, </span></span><br>
+                Results: <span ng-repeat="day in days">{$ day $} <b>{$ result.result[$index] $}</b><span ng-show="!$last">, </span></span>
+            </li>
+        </ul>
+    </div>
+
+    <div ng-show="weeklyResults.length > 1">
+        <h6>Previously ran results:</h6>
+        <ul class="collection">
+            <li class="collection-item" ng-repeat="result in weeklyResults" ng-hide="$first">
+                Ran by: <b>{$ result.ran_by $}</b>
+                on {$ result.created | date:"EEEE" $} at {$ result.created | date:"mediumTime" $}<br/>
+                Partakers: <span ng-repeat="partaker in result.partakers"><b>{$ partaker $}</b><span ng-show="!$last">, </span></span><br>
+                Results: <span ng-repeat="day in days">{$ day $} <b>{$ result.result[$index] $}</b><span ng-show="!$last">, </span></span>
+            </li>
+        </ul>
+    </div>
 </div>
