Add logo, favicon + add dev dummy data and expetion for myself.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,3 +40,12 @@ td {
 span.project-user {
     padding-right: 15px;
 }
+
+.nav-wrapper a.dropdown-button {
+    width: 180px;
+    text-align: center;
+}
+
+.bugman-logo img {
+    height: 64px;
+}
