--- a/static/js/bugman/templates/lottery.html
+++ b/static/js/bugman/templates/lottery.html
@@ -21,7 +21,7 @@
 
 <h5 class="center-align" ng-show="project && projectUsers.length == 0">The project runs itself!</h5>
 <h5 class="center-align" ng-show="project && projectUsers.length == 1">One potato, one bugman!</h5>
-<h5 class="center-align" ng-show="!project">pick a project and roll the spuds!</h5>
+<p class="center-align" ng-show="!project">pick a project and roll the spuds!</p>
 
 <div ng-show="checkedUsers.length > 1">
     <table class="responsive-table">
