--- a/templates/bugman/home.html
+++ b/templates/bugman/home.html
@@ -19,7 +19,7 @@
 
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#!" class="bugman-logo"><img src="{% static "images/bugtato.png" %}"</a>
+                    <a href="#!" class="bugman-logo"><img src="{% static "images/bugtato-128.png" %}"</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
                     <ul class="right hide-on-med-and-down">
                         <li>
