--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .ng-show {
     display: block;
 }
@@ -9,7 +13,7 @@
 div.day {
     position: relative;
     width: 120px;
-    height: 31px;
+    height: 30px;
     z-index: -10;
     overflow: hidden;
     border: 1px solid white;
@@ -27,6 +31,7 @@ div.day ul li {
     display: block;
     height: 30px;
     width: 120px;
+    white-space: nowrap;
 }
 
 td {
@@ -48,4 +53,51 @@ span.project-user {
 
 .bugman-logo img {
     height: 64px;
+    margin-left: 10px;
+}
+
+.potatobar nav {
+    background: #EEF1F9;
+    padding: 5px;
+    margin: 0;
+    zoom: 1;
+    overflow: hidden;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    line-height: 1.7;
+    height: auto;
+}
+
+.potatobar a {
+    text-decoration: none;
+    color: #1F4F82;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    line-height: 1.7;
+    padding: 0 5px;
+}
+
+#potatobar input[type="search"] {
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    height: 20px;
+    background: white;
+}
+
+#potatobar input[type="submit"] {
+    font-size: 14px;
+    color: #000000;
+}
+
+div.nav-wrapper li {
+    white-space: nowrap;
+}
+
+div.navbar {
+    width: 100%;
+    padding: 0;
+}
+
+#projects-dropdown {
+    overflow: hidden;
 }
