--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,6 @@
 
 div.day {
     position: relative;
-    width: 120px;
     height: 30px;
     z-index: -10;
     overflow: hidden;
@@ -96,7 +95,7 @@ span.project-user {
 }
 
 div.nav-wrapper li {
-    white-space: nowrap;
+
 }
 
 div.navbar {
@@ -104,6 +103,29 @@ div.navbar {
     padding: 0;
 }
 
+div.navbar li a {
+    line-height: 1.2em;
+    height: auto;
+    padding: 23px 15px;
+}
+
+div.navbar li a i {
+    line-height: 0.7em;
+    height: auto;
+}
+
 #projects-dropdown {
-    overflow: hidden;
+    white-space: normal;
+    overflow-x: hidden;
+    right: 0 !important;
+    left: auto !important;
+    width: 200px !important;
+}
+
+nav .button-collapse {
+    padding-left: 10px;
+}
+
+.container {
+     width: 100%;
 }
