--- a/templates/bugman/home.html
+++ b/templates/bugman/home.html
@@ -40,6 +40,7 @@
         <div ng-view class="container"></div>
 
         <script src="{% static "js/jquery-2.1.1.min.js" %}"></script>
+        <script src="{% static "js/moment.js" %}"></script>
         <script src="{% static "js/materialize.min.js" %}"></script>
         <script src="{% static "js/angular.js" %}"></script>
         <script src="{% static "js/ng-route.js" %}"></script>
